# cppCompetenceDevelopment

GeneralCPP/1-Functions/: 1-templates.cpp  2-lambda.cpp  3-functions.cpp
GeneralCPP/2-enums/: 1-basicEnum.cpp  2-enumClass.cpp
GeneralCPP/3-OOP/: 1-designeted_struct_initializer.cpp  2-operator_overload.cpp  3-rule_of_five.cpp
GeneralCPP/4-STL_and_container/: 1-str_reversed.cpp  2-span.cpp  3-generate.cpp  4-equal.cpp  5-anyAllNone_of.cpp
GeneralCPP/5-newFeatures/: 1-ranges.cpp
GeneralCPP/6-Threading/: 1-basic.cpp  2-sending_values.cpp  3-mutex.cpp  4-async.cpp
Qt6Core-Adv/databases/qPluginLoader/: CMakeLists.txt  main.cpp
Qt6Core-Adv/databases/qSqlDriver/: CMakeLists.txt  main.cpp
Qt6Core-Adv/deployment/testApp/: CMakeLists.txt  main.cpp
Qt6Core-Adv/networking/SyncTCP/: CMakeLists.txt  main.cpp
Qt6Core-Adv/networking/asyncTCP/: CMakeLists.txt  client.cpp  client.h  main.cpp
Qt6Core-Adv/networking/asyncUDP/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Qt6Core-Adv/networking/hostAdress/: CMakeLists.txt  main.cpp
Qt6Core-Adv/networking/networkAccessManagerFTP/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Qt6Core-Adv/networking/networkAccessManagerHTTP/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Qt6Core-Adv/networking/sslSocket/: CMakeLists.txt  client.cpp  main.cpp
Qt6Core-Adv/networking/syncUDP/: CMakeLists.txt  main.cpp
Qt6Core-Adv/networking/tcpServer/: CMakeLists.txt  server.cpp
Qt6Core-Adv/networking/tcpSocket/: CMakeLists.txt  client.cpp  client.h  main.cpp
Qt6Core-Adv/networking/threadedTCP/: CMakeLists.txt  client.cpp  client.h  main.cpp
Qt6Core-Adv/networking/threadedTCPServer/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
Qt6Core-Adv/networking/threadedUDP/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Qt6Core-Adv/networking/udpChatExample/: CMakeLists.txt  chat.cpp  chat.h  commandline.cpp  commandline.h  main.cpp
Qt6Core-Adv/networking/udpSocket/: CMakeLists.txt  worker.cpp  worker.h
Qt6Core-Adv/testing/qtTest/: CMakeLists.txt  cat.h  main.cpp
Qt6Core-Adv/threads/concurrent/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/concurrentIntro/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/concurrentIssues/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/futureIterator/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/futureSyncronizer/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/futureWatcher/: CMakeLists.txt  main.cpp  test.cpp
Qt6Core-Adv/threads/futureWatcherSlots/: CMakeLists.txt  test.cpp  test.h
Qt6Core-Adv/threads/futureWithReturn/: CMakeLists.txt  main.cpp
Qt6Core-Adv/threads/mutex/: CMakeLists.txt  counter.cpp  main.cpp
Qt6Core-Adv/threads/mutex_locker/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
Qt6Core-Adv/threads/qWaitCondition/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
Qt6Core-Adv/threads/semaphore/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
Qt6Core-Adv/threads/signalSlotsInThreads/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
Qt6Core-Adv/threads/threadedExample/: CMakeLists.txt  main.cpp  manager.cpp
QtDesignPatterns/S2-class patterns/LiskovSubstitutionPrinciple/: LiskovSubstitutionPrinciple.pro  main.cpp  mysocket.cpp
QtDesignPatterns/S2-class patterns/OpenClosedPrinciple/: OpenClosedPrinciple.pro  caffeeinator3000.cpp  caffeeinator3000.h  cofeemachine.cpp  cofeemachine.h  main.cpp  shop.cpp  shop.h
QtDesignPatterns/S2-class patterns/SingleResponsabilityPrinciple/: SingleResponsabilityPrinciple.pro  main.cpp  tempconverter.cpp
QtWidgets - Begin/S1/editorVsCoding/: dialog.cpp  dialog.ui
QtWidgets - Begin/S1/multipleWaysSignalsSlots/: dialog.cpp  dialog.ui
QtWidgets - Begin/S1/qdialog/: dialog.ui
QtWidgets - Begin/S1/signals_slots/: dialog.ui
QtWidgets - Begin/S10-Models/ExtractingDataFromModel/: CMakeLists.txt  dialog.cpp  dialog.ui
QtWidgets - Begin/S10-Models/HowSyncModels/: CMakeLists.txt  dialog.cpp
QtWidgets - Begin/S10-Models/QFileSystemModel/: CMakeLists.txt  dialog.cpp  dialog.ui
QtWidgets - Begin/S10-Models/QStandardItemModel-TreeView/: CMakeLists.txt  dialog.cpp  dialog.h
QtWidgets - Begin/S10-Models/QStandardItemModel_List/: CMakeLists.txt  dialog.cpp
QtWidgets - Begin/S10-Models/QStandardItemModem-Table/: CMakeLists.txt  dialog.cpp
QtWidgets - Begin/S10-Models/QStringListModel/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QtWidgets - Begin/S11-example_app/Clippy/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtWidgets - Begin/S11-example_app/ScreeShot/: dialog.cpp  dialog.h  dialog.ui
QtWidgets - Begin/S11-example_app/StopWatch/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QtWidgets - Begin/S11-example_app/TCPChatClient/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QtWidgets - Begin/S11-example_app/TCPChatServer/: TCPChatServer.pro  dialog.cpp  dialog.ui  server.cpp  server.h
QtWidgets - Begin/S11-example_app/TodoList/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtWidgets - Begin/S11-example_app/calculator/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  equation.cpp  equation.h
QtWidgets - Begin/S11-example_app/pathsBuilder/: dialog.cpp  dialog.ui
QtWidgets - Begin/S2-Layouts/absoluteLayout/: absoluteLayout.pro  absolutelayout.cpp  absolutelayout.h  absolutelayout.ui  main.cpp
QtWidgets - Begin/S2-Layouts/formLayout/: dialog.ui
QtWidgets - Begin/S2-Layouts/gridLayout/: dialog.ui
QtWidgets - Begin/S2-Layouts/horizontalLayouts/: dialog.ui
QtWidgets - Begin/S2-Layouts/professionalLayoutExample/: dialog.ui
QtWidgets - Begin/S2-Layouts/splitters/: dialog.ui
QtWidgets - Begin/S3-buttons_checkboxes/commandLinkButton_dialogButtonBox/: CMakeLists.txt  dialog.cpp  dialog.ui
QtWidgets - Begin/S3-buttons_checkboxes/pushButton/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QtWidgets - Begin/S4-combox,list,etc/spinBox/: dialog.ui  (+2 more)
QtWidgets - Begin/S5-Resources/resourceInLib/MyApp/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QtWidgets - Begin/S8-containers/naming_UI_elem/: CMakeLists.txt  dialog.cpp  dialog.ui
(+125 files in other folders)
